[package]
name = "opensheet"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
governor = "0.10.0"
log = "0.4.27"
nonzero_ext = "0.3.0"
reqwest = { version = "0.12.15", features = ["json", "gzip"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.16.0", features = ["v4", "serde"] }

